# RAG_Engine

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  ingest.py  pyproject.toml
app/: config.py  main.py
app/api/: models.py  routes.py
app/chat/: __init__.py  pipeline.py  session.py
app/db/: relational.py  vector_store.py
app/ingestion/: chunker.py  ocr_parser.py  pdf_parser.py  pipeline.py  sparse.py
app/llm/: client.py
app/models/: document.py  query.py
app/query/: hybrid_search.py  pipeline.py  rag_generator.py  reranker.py  router.py
app/storage/: __init__.py  pdf_storage.py
data/sample_pdfs/: sample_it_guide.py
docs/: diagram-v4.html
docs/reference/: MANUAL.md  sampleqna.md
helpdesk-ui/: build_err.txt  build_result.txt  build_result2.txt  package-lock.json  package.json
helpdesk-ui/src/app/: globals.css  layout.tsx  page.tsx
helpdesk-ui/src/app/chat/: loading.tsx  page.tsx
helpdesk-ui/src/app/documents/: loading.tsx  page.tsx
helpdesk-ui/src/app/query/: loading.tsx  page.tsx
helpdesk-ui/src/app/status/: loading.tsx  page.tsx
helpdesk-ui/src/components/: chat-area.tsx  chat-input.tsx  chat-sidebar.tsx  confidence-gauge.tsx  demo-banner.tsx  document-list.tsx  nav.tsx  response-card.tsx  skeleton.tsx  source-accordion.tsx  upload-form.tsx
helpdesk-ui/src/lib/: api.ts  utils.ts
helpdesk-ui/src/types/: index.ts
roadmap/: CONTEXT_L1.md  CONTEXT_L2.md  CONTEXT_L3.md  CONTEXT_L4.md  CONTEXT_L6.md  CONTEXT_L7.md
scripts/: __init__.py  bootstrap_start.py  init_db.py  init_vector_db.py  reset_vdb.py  run_acceptance_tests.py  seed_demo.py  test_q.py  test_scores.py
scripts/manual/: test_direct.py  test_network.py  test_qna.py
tests/e2e/: __init__.py  test_e2e.py
tests/integration/: test_api.py  test_chat_api.py
tests/unit/: test_chat.py  test_config.py  test_ingestion.py  test_pdf_storage.py  test_query.py  test_vector_store_qdrant_compat.py
