[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helpdesk-chatbot"
version = "0.1.0"
description = "Configurable IT Helpdesk RAG System"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "openai",
    "cohere",
    "qdrant-client",
    "pymilvus",
    "sqlalchemy",
    "asyncpg",
    "aiomysql",
    "greenlet",
    "pymupdf",
    "pytesseract",
    "pillow",
    "pdf2image",
    "langchain-text-splitters",
    "tenacity",
    "rank_bm25",
    "reportlab"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "aiosqlite"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
